client: use virtual thread for shutdown hook